Improve mod loading errors (#9870)